--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,3 @@
-google-api-python-client
-oauth2client
-pillow
-python-dev  # brew
-python-spidev   # brew
-
-sudo apt-get update
-sudo apt-get install:
-- python-dev
-- python-smbus
-- python-serial
-- python-imaging
-- python-rpi.gpio
-- wiringpi
-- python-spidev
-- fonts-freefont-ttf
+Pillow==5.3.0
+RPi.GPIO==0.6.5
+spidev==3.2
