--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 Pillow==5.3.0
 RPi.GPIO==0.6.5
+requests==2.20.1
 spidev==3.2
+# certifi==2018.11.29
+# chardet==3.0.4
+# idna==2.7
+# urllib3==1.24.1
